<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="5dip" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="@dimen/textWidth"
        android:layout_height="wrap_content"
        android:text="@string/lbl_IPAddress"
        android:textSize="@dimen/fontSizeTitle"/>

    <EditText 
        android:id="@+id/txt_IPAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_IpAddress"
        android:textSize="@dimen/fontSizeTitle"
        android:inputType="textPostalAddress" />
        
    </LinearLayout>
  
     <LinearLayout 
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
        android:id="@+id/lbl_port"
        android:layout_width="@dimen/textWidth"
        android:layout_height="wrap_content"
        android:text="@string/lbl_port"
        android:textSize="@dimen/fontSizeTitle" />

    <EditText
        android:id="@+id/txt_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_port"
        android:textSize="@dimen/fontSizeTitle"
        android:inputType="textPostalAddress" />
        
    </LinearLayout>

     <Button
         android:id="@+id/btn_connect"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="@string/btn_connect"
         android:textSize="@dimen/fontSizeTitle" />

</LinearLayout>
